verbesserungen im Design und Funkionen

--- a/src/app/features/files/file-browser.component.html
+++ b/src/app/features/files/file-browser.component.html
@@ -16,7 +16,7 @@
         <i class="bi bi-folder2"></i>
         <span>Dateien</span>
       </button>
-      <button class="view-btn" [class.active]="viewTrash" (click)="viewTrash=true; loadFiles()">
+      <button class="view-btn" (click)="goToPapierkorb()">
         <i class="bi bi-trash"></i>
         <span>Papierkorb</span>
       </button>
